# SibeliaZ

./: .gitignore  .gitmodules  CMakeLists.txt  DATA.txt  LICENSE.txt  NEWS.md  NEWS.txt  README.md
SibeliaZ-LCB/: CMakeLists.txt  blocksfinder.cpp  blocksfinder.h  distancekeeper.h  glue_gfa1.py  junctionstorage.h  maf_to_gfa1.py  maf_to_xmfa.py  outputgenerator.h  path.h  sibeliaz  sibeliaz.cpp  sweeper.h
SibeliaZ-LCB/common/: dnachar.cpp  junctionapi.h  streamfastaparser.cpp  streamfastaparser.h
examples/: README.md
examples/sibeliaz_out/: blocks_coords.gff
msvs/sibelia-pp/: dump.dot  sibelia-pp.sln  sibelia-pp.vcxproj  sibelia-pp.vcxproj.filters
msvs/sibelia-pp/test/: junc_to_dot.py  output.txt  run.stage  test.fa
msvs/sibelia-pp/test/test1/: junc.dot  junc.txt  test.fa
msvs/sibelia-pp/test/test2/: DBG_1034_19.dot  DBG_1043.dot  DBG_649.dot  DBG_649_19.dot  DBG_ALL.dot  DBG_ALL2_11.dot  DBG_ALL2_15.dot  DBG_ALL2_19.dot  DBG_ALL_11.dot  DBG_ALL_13.dot  DBG_ALL_19.dot  DNA_1034.fa  DNA_1043.fa  DNA_649.fa  DNA_ALL.fa  DNA_ALL2.fa  MSA_1034_dna.fa  MSA_1043_dna.fa  glue.py  junc.dot  junc.txt  strip_fa.py
msvs/sibelia-pp/test/test2/DBG_ALL_11/: blocks_coords.txt  blocks_sequences.fasta  coverage_report.txt  graph.dot
msvs/sibelia-pp/test/test3/: Helicobacter_pylori.fasta  output.txt
msvs/sibelia-pp/test/test3/DBG_19/: blocks_coords.txt  blocks_sequences.fasta  coverage_report.txt
msvs/sibelia-pp/test/test3/out_old/: blocks_coords.txt  coverage_report.txt  d3_blocks_diagram.html  genomes_permutations.txt
msvs/sibelia-pp/test/test3/out_old/circos/: circos.highlight.txt  circos.image.conf  circos.segdup.txt  circos.sequences.txt
msvs/sibelia-pp/test/test4/: web2_cl75.fa
msvs/sibelia-pp/test/test4/DBG2_13/: blocks_coords.txt  blocks_sequences.fasta  coverage_report.txt
other/Mousemart/: gene_gene.xml  gene_xml.py  get.sh  glue.py  mice.txt  result.txt
other/Mousemart/gene/: m129s1svimj_gene.xml  maj_gene.xml  makrj_gene.xml  mbalbcj_gene.xml  mc3hhej_gene.xml  mc57bl6nj_gene.xml  mcasteij_gene.xml  mcbaj_gene.xml  mdba2j_gene.xml  mfvbnj_gene.xml  mlpj_gene.xml  mmusculus.xml  mnodshiltj_gene.xml  mnzohlltj_gene.xml  mpwkphj_gene.xml  mwsbeij_gene.xml
src/: CMakeLists.txt  blocksfinder.cpp  blocksfinder.h  blocksgenerator.h  distancekeeper.h  dnachar.cpp  dnachar.h  edgestorage.h  forbidden.h  junctionapi.h  junctionstorage.h  path.h  sibelia-pp.cpp  sibeliaz.cpp  smallpath.h  streamfastaparser.cpp  streamfastaparser.h  traversal.h  vertexstorage.h
src/util/: compare_annotation.py  dotify.bat  maskn.py  realign.py  rewrite_header.py
src/util/alignment/: align_lagan.sh  align_spoa.sh  run_mlagan.sh  run_spoa.sh  split.py
src/util/micerun/: run.sh
src/util/mousemart/: align_lagan.sh  collect_lagan.py  collect_lagan_bin.py  compare.sh  compare_alignments.py  compare_once.sh  gene_xml.py  generate_blocks_pwise.py  generate_genes.py  get_all.sh  inspect_gff.py  inspect_maf.py  mice.txt  run_all.sh  run_lagan.sh  run_lagan_once.py  split.py
src/util/paper/: gen_tables.py
src/util/scalerun/: run.sh
src/util/simrun/: collect_lagan.py  extract.py  extract_cactus.py  extract_lsib.py  extract_lsib_param.py  extract_min_block.py  extract_sib.py  extract_sib_param.py  gen_cactus_input.py  runCactus.sh  runCactusAll.sh  runLSibelia.sh  runLSibeliaAll.sh  runLSibeliaFixed.sh  runLSibeliaM.sh  runSibelia.sh  runSibeliaAll.sh  run_mlagan.sh  run_mlagan_once.py  strip_cactus.py
